1.02.14
Bugfix: There is an error with friction on the ground, and falling through the ground.

1.02.14 (11-10-2006)
Bugfix: History buttons are displaying total energy without thermal, and calling it total.
            -Added a thermal energy readout, and fix the total energy value to reflect all energy (not just mechanical energy).
Reduced maximum allowed friction.
Removed keypress focus from friction control (so it won't change while using thrust).
Bugfix: Skater rotates back and forth quickly when at the bottom of a potential well (with friction).
Skater can traverse the track while underground.
Relabeled "Slow Motion" to "Playback Slow"
Bugfix: After some combination of recording and playback, the track graphic becomes dissociated from the skater.
            -The skater will continue to traverse the path where the track used to be, even after it has been dragged.
                    -This solution is a bit of a hack, not elegant, passes tests, but not guaranteed accurate.

1.02.13 (11-10-2006)
Set the bounciness to correspond to the bounciness slider.
Set the minimum mass of the skater to 1.0 kg.
Fixed a bug that caused save/load to fail sometimes.

1.02.12 (11-8-2006)
Bugfix: When you move from space to earth the "use arrow keys to thrust" stays up.
Bugfix: When I pulled up energy vs time graph, and messed around with pausing, using cursor, and trying to go again ... it got confused. (Right now I can't get the guy to start moving again ... even when I hit Reset.)
Added friction for bounces, when friction is enabled.
            Added coefficient of restitution as a nonlinear function of friction coefficient.
Added insurance that the skater won't pass through a spline while in free-fall.
Removed some bogus collision code (for handling ends of spline).
Added code that prevents the skater from bouncing back and forth centered on a track.
Added save/load for splines & skaters.
Added roller-coaster mode (sticky tracks).